--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
 <head>
   <title>My Game Shelf</title>
+  <meta charset="UTF-8">
   <style>
     body {
       background: #111;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
 
     h1 {
-      margin-top: 20px;
+      padding: 20px;
     }
 
     .shelf {
@@ -23,11 +26,11 @@
     }
 
     .game-card {
-      background: #222;
+      background: #1e1e1e;
       padding: 10px;
-      border-radius: 10px;
-      width: 160px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      border-radius: 12px;
+      width: 170px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
       transition: transform 0.2s ease;
     }
 
@@ -39,26 +42,26 @@
       width: 150px;
       height: 200px;
       object-fit: cover;
-      border-radius: 5px;
+      border-radius: 8px;
     }
 
     .game-card h3 {
-      font-size: 16px;
+      font-size: 14px;
       margin: 10px 0 5px 0;
     }
 
-    .game-card a {
+    .download-btn {
       display: inline-block;
-      padding: 5px 10px;
+      padding: 6px 10px;
       background: #00ff88;
       color: black;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 6px;
       font-weight: bold;
       margin-top: 5px;
     }
 
-    .game-card a:hover {
+    .download-btn:hover {
       background: #00cc6a;
     }
   </style>
@@ -66,33 +69,34 @@
 
 <body>
 
-  <h1>🎮 My Game Shelf</h1>
+<h1>🎮 My Game Shelf</h1>
 
-  <div class="shelf" id="shelf"></div>
+<div class="shelf" id="shelf"></div>
 
-  <script>
-    fetch("86games.json")
-      .then(response => response.json())
-      .then(data => {
-        const shelf = document.getElementById("shelf");
+<script>
+fetch("games.json")
+  .then(response => response.json())
+  .then(data => {
+    const shelf = document.getElementById("shelf");
+    shelf.innerHTML = "";
 
-        data.forEach(game => {
-          const card = document.createElement("div");
-          card.className = "game-card";
+    data.forEach(game => {
+      const card = document.createElement("div");
+      card.className = "game-card";
 
-          card.innerHTML = `
-            <img src="${game.image}" onerror="this.src='https://via.placeholder.com/150x200?text=No+Image'">
-            <h3>${game.name}</h3>
-            <a href="${game.file}" download>Download</a>
-          `;
+      card.innerHTML = `
+        <img src="${game.image}" onerror="this.src='https://via.placeholder.com/150x200?text=No+Image'">
+        <h3>${game.name}</h3>
+        <a class="download-btn" href="${game.file}" download>Download</a>
+      `;
 
-          shelf.appendChild(card);
-        });
-      })
-      .catch(error => {
-        console.error("Error loading games:", error);
-      });
-  </script>
+      shelf.appendChild(card);
+    });
+  })
+  .catch(error => {
+    console.error("Error loading games:", error);
+  });
+</script>
 
 </body>
 </html>
