--- a/index.html
+++ b/index.html
@@ -1,96 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Game Shelf</title>
+  <title>86 Game Collection</title>
   <meta charset="UTF-8">
   <style>
     body {
-      background: #111;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
       margin: 0;
-      padding: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(-45deg, #0f001a, #1a0033, #140022, #000000);
+      background-size: 400% 400%;
+      animation: bgAnimation 12s ease infinite;
+      color: #fff;
+    }
+
+    @keyframes bgAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     h1 {
-      padding: 20px;
+      text-align: center;
+      margin-bottom: 25px;
+      color: #c300ff;
+      text-shadow: 0 0 10px #c300ff, 0 0 20px #8a00ff;
     }
 
-    .shelf {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: rgba(20, 0, 40, 0.8);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 0 25px #8a00ff;
     }
 
-    .game-card {
-      background: #1e1e1e;
+    th {
+      padding: 12px;
+      border: 1px solid #8a00ff;
+      background: #1f003d;
+      color: #e066ff;
+      text-shadow: 0 0 5px #c300ff;
+    }
+
+    td {
       padding: 10px;
-      border-radius: 12px;
-      width: 170px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.6);
-      transition: transform 0.2s ease;
+      border: 1px solid #330066;
+      text-align: center;
     }
 
-    .game-card:hover {
-      transform: scale(1.05);
+    tr:nth-child(even) {
+      background: rgba(40, 0, 80, 0.4);
     }
 
-    .game-card img {
-      width: 150px;
-      height: 200px;
+    tr:hover {
+      background: rgba(120, 0, 255, 0.3);
+      transition: 0.3s;
+      box-shadow: 0 0 15px #c300ff inset;
+    }
+
+    img {
+      width: 80px;
+      height: 110px;
       object-fit: cover;
-      border-radius: 8px;
-    }
-
-    .game-card h3 {
-      font-size: 14px;
-      margin: 10px 0 5px 0;
+      border-radius: 6px;
+      box-shadow: 0 0 10px #8a00ff;
     }
 
     .download-btn {
-      display: inline-block;
-      padding: 6px 10px;
-      background: #00ff88;
+      padding: 6px 12px;
+      background: #c300ff;
       color: black;
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      margin-top: 5px;
+      box-shadow: 0 0 10px #c300ff;
+      transition: 0.3s;
     }
 
     .download-btn:hover {
-      background: #00cc6a;
+      background: #ff00ff;
+      box-shadow: 0 0 20px #ff00ff;
     }
   </style>
 </head>
 
 <body>
 
-<h1>🎮 My Game Shelf</h1>
+<h1>🟣 86 Game Collection 🟣</h1>
 
-<div class="shelf" id="shelf"></div>
+<table>
+  <thead>
+    <tr>
+      <th>Cover</th>
+      <th>Game Name</th>
+      <th>File</th>
+      <th>Download</th>
+    </tr>
+  </thead>
+  <tbody id="gameTable">
+  </tbody>
+</table>
 
 <script>
 fetch("games.json")
   .then(response => response.json())
   .then(data => {
-    const shelf = document.getElementById("shelf");
-    shelf.innerHTML = "";
+    const table = document.getElementById("gameTable");
 
     data.forEach(game => {
-      const card = document.createElement("div");
-      card.className = "game-card";
+      const row = document.createElement("tr");
 
-      card.innerHTML = `
-        <img src="${game.image}" onerror="this.src='https://via.placeholder.com/150x200?text=No+Image'">
-        <h3>${game.name}</h3>
-        <a class="download-btn" href="${game.file}" download>Download</a>
+      row.innerHTML = `
+        <td>
+          <img src="${game.image}" 
+               onerror="this.src='https://via.placeholder.com/80x110?text=No+Image'">
+        </td>
+        <td>${game.name}</td>
+        <td>${game.file}</td>
+        <td>
+          <a class="download-btn" href="${game.file}" download>Download</a>
+        </td>
       `;
 
-      shelf.appendChild(card);
+      table.appendChild(row);
     });
   })
   .catch(error => {
